# python-api

./: README.md
.github/workflows/: deploy_api.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml  template.yaml
api/app/: main.py
api/app/api/: deps.py  main.py
api/app/api/routes/: __init__.py  auth.py  root.py  users.py
api/app/core/: config.py  security.py
api/app/database/: __init__.py  main.py
api/app/database/drivers/: __init__.py  users.py
api/app/models/: id.py  security.py  users.py
api/scripts/deploy/: build.sh  deploy.sh  push.sh  run.sh
